--- a/test.ipynb
+++ b/test.ipynb
@@ -276,7 +276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "prj_rdv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -290,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
