--- a/test.ipynb
+++ b/test.ipynb
@@ -2,69 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "4310d501",
+   "execution_count": 2,
+   "id": "a1cda773",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from etl import ETL"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "5605dcf7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "etl = ETL()\n",
-    "data_json = etl.extract()\n",
-    "print(data_json)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "490db5d1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.DataFrame(data_json)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "30230cfc",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(data.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "83caddf8",
+   "execution_count": 3,
+   "id": "58035ffe",
    "metadata": {},
    "outputs": [
     {
@@ -88,190 +38,190 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>_id</th>\n",
+       "      <th>id</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>network</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>source</th>\n",
+       "      <th>status</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>title</th>\n",
+       "      <th>type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>683c39e61a9de58bff15874f</td>\n",
+       "      <td>tvmaze_1</td>\n",
+       "      <td>['Drama', 'Science-Fiction', 'Thriller']</td>\n",
+       "      <td>CBS</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>2013-06-24</td>\n",
+       "      <td>60</td>\n",
+       "      <td>tvmaze</td>\n",
+       "      <td>Ended</td>\n",
+       "      <td>Under the Dome is the story of a small town th...</td>\n",
+       "      <td>Under the Dome</td>\n",
+       "      <td>tvshow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>683c39e61a9de58bff158750</td>\n",
+       "      <td>tvmaze_2</td>\n",
+       "      <td>['Action', 'Crime', 'Science-Fiction']</td>\n",
+       "      <td>CBS</td>\n",
+       "      <td>8.8</td>\n",
+       "      <td>2011-09-22</td>\n",
+       "      <td>60</td>\n",
+       "      <td>tvmaze</td>\n",
+       "      <td>Ended</td>\n",
+       "      <td>You are being watched. The government has a se...</td>\n",
+       "      <td>Person of Interest</td>\n",
+       "      <td>tvshow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>683c39e61a9de58bff158751</td>\n",
+       "      <td>tvmaze_3</td>\n",
+       "      <td>['Drama', 'Horror', 'Romance']</td>\n",
+       "      <td>CTV Sci-Fi Channel</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>2014-01-11</td>\n",
+       "      <td>60</td>\n",
+       "      <td>tvmaze</td>\n",
+       "      <td>Ended</td>\n",
+       "      <td>Based on the critically acclaimed series of no...</td>\n",
+       "      <td>Bitten</td>\n",
+       "      <td>tvshow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>683c39e61a9de58bff158752</td>\n",
+       "      <td>tvmaze_4</td>\n",
+       "      <td>['Drama', 'Action', 'Science-Fiction']</td>\n",
+       "      <td>The CW</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>2012-10-10</td>\n",
+       "      <td>60</td>\n",
+       "      <td>tvmaze</td>\n",
+       "      <td>Ended</td>\n",
+       "      <td>After a violent shipwreck, billionaire playboy...</td>\n",
+       "      <td>Arrow</td>\n",
+       "      <td>tvshow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>683c39e61a9de58bff158753</td>\n",
+       "      <td>tvmaze_5</td>\n",
+       "      <td>['Drama', 'Crime', 'Thriller']</td>\n",
+       "      <td>HBO</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>2014-01-12</td>\n",
+       "      <td>60</td>\n",
+       "      <td>tvmaze</td>\n",
+       "      <td>Running</td>\n",
+       "      <td>Touch darkness and darkness touches you back. ...</td>\n",
+       "      <td>True Detective</td>\n",
+       "      <td>tvshow</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: []"
+       "                        _id        id  \\\n",
+       "0  683c39e61a9de58bff15874f  tvmaze_1   \n",
+       "1  683c39e61a9de58bff158750  tvmaze_2   \n",
+       "2  683c39e61a9de58bff158751  tvmaze_3   \n",
+       "3  683c39e61a9de58bff158752  tvmaze_4   \n",
+       "4  683c39e61a9de58bff158753  tvmaze_5   \n",
+       "\n",
+       "                                     genres             network  rating  \\\n",
+       "0  ['Drama', 'Science-Fiction', 'Thriller']                 CBS     6.5   \n",
+       "1    ['Action', 'Crime', 'Science-Fiction']                 CBS     8.8   \n",
+       "2            ['Drama', 'Horror', 'Romance']  CTV Sci-Fi Channel     7.4   \n",
+       "3    ['Drama', 'Action', 'Science-Fiction']              The CW     7.4   \n",
+       "4            ['Drama', 'Crime', 'Thriller']                 HBO     8.1   \n",
+       "\n",
+       "  release_date  runtime  source   status  \\\n",
+       "0   2013-06-24       60  tvmaze    Ended   \n",
+       "1   2011-09-22       60  tvmaze    Ended   \n",
+       "2   2014-01-11       60  tvmaze    Ended   \n",
+       "3   2012-10-10       60  tvmaze    Ended   \n",
+       "4   2014-01-12       60  tvmaze  Running   \n",
+       "\n",
+       "                                             summary               title  \\\n",
+       "0  Under the Dome is the story of a small town th...      Under the Dome   \n",
+       "1  You are being watched. The government has a se...  Person of Interest   \n",
+       "2  Based on the critically acclaimed series of no...              Bitten   \n",
+       "3  After a violent shipwreck, billionaire playboy...               Arrow   \n",
+       "4  Touch darkness and darkness touches you back. ...      True Detective   \n",
+       "\n",
+       "     type  \n",
+       "0  tvshow  \n",
+       "1  tvshow  \n",
+       "2  tvshow  \n",
+       "3  tvshow  \n",
+       "4  tvshow  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "data = pd.read_csv(\"media_data.csv\")\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "1c819fa1",
+   "execution_count": 4,
+   "id": "2e1479ac",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Genre mapping fetched successfully\n",
-      "Done Fetching Genre\n",
-      "Saving genre_map.json to: d:\\Kuliah\\Semester 6\\Capstone\\Movie-Show-Analysis\\genre_map.json\n",
-      "{28: 'Action', 12: 'Adventure', 16: 'Animation', 35: 'Comedy', 80: 'Crime', 99: 'Documentary', 18: 'Drama', 10751: 'Family', 14: 'Fantasy', 36: 'History', 27: 'Horror', 10402: 'Music', 9648: 'Mystery', 10749: 'Romance', 878: 'Science Fiction', 10770: 'TV Movie', 53: 'Thriller', 10752: 'War', 37: 'Western'}\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1569 entries, 0 to 1568\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   _id           1569 non-null   object \n",
+      " 1   id            1569 non-null   object \n",
+      " 2   genres        1569 non-null   object \n",
+      " 3   network       1494 non-null   object \n",
+      " 4   rating        1569 non-null   float64\n",
+      " 5   release_date  1568 non-null   object \n",
+      " 6   runtime       1569 non-null   int64  \n",
+      " 7   source        1569 non-null   object \n",
+      " 8   status        1569 non-null   object \n",
+      " 9   summary       1569 non-null   object \n",
+      " 10  title         1569 non-null   object \n",
+      " 11  type          1569 non-null   object \n",
+      "dtypes: float64(1), int64(1), object(10)\n",
+      "memory usage: 147.2+ KB\n"
      ]
     }
    ],
    "source": [
-    "from extract import ExtractData\n",
-    "from dotenv import load_dotenv\n",
-    "import os\n",
-    "import json\n",
-    "\n",
-    "extract = ExtractData()\n",
-    "load_dotenv()\n",
-    "    \n",
-    "AUTH_KEY = os.getenv(\"TMDB_AUTH\")\n",
-    "genre_map = extract.fetch_tmdb_genre(AUTH_KEY)\n",
-    "with open(\"genre_map.json\", \"w\", encoding=\"utf-8\") as f:\n",
-    "                json.dump(genre_map, f, ensure_ascii=False, indent=2)\n",
-    "print(\"Saving genre_map.json to:\", os.path.abspath(\"genre_map.json\"))\n",
-    "print(genre_map)"
+    "data.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "6e90e896",
+   "execution_count": null,
+   "id": "00cd09a0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "INFO:elt:Successfully connected to MongoDB\n",
-      "INFO:elt:MongoDB connection closed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Prepared 96 enriched movies.\n",
-      "A Minecraft Movie → Family, Comedy, Adventure, Fantasy\n",
-      "Final Destination Bloodlines → Horror, Mystery\n",
-      "A Working Man → Action, Crime, Thriller\n",
-      "Warfare → War, Action\n",
-      "Snow White → Family, Fantasy\n",
-      "The Great Escape → Action, Thriller\n",
-      "Tin Soldier → Action, Thriller\n",
-      "Bambi: A Life in the Woods → Adventure, Family\n",
-      "Last Bullet → Action, Crime, Thriller, Drama\n",
-      "Mission: Impossible - The Final Reckoning → Action, Adventure, Thriller\n",
-      "Conjuring the Cult → Horror, Drama\n",
-      "Brave Citizen → Action, Drama, Comedy\n",
-      "Thunderbolts* → Action, Science Fiction, Adventure\n",
-      "The Haunting at Saint Joseph's → Horror, Thriller\n",
-      "Exterritorial → Thriller, Action\n",
-      "In the Lost Lands → Action, Fantasy, Adventure\n",
-      "Rust → Western\n",
-      "From the Shadows → Thriller, Science Fiction, Horror\n",
-      "Captain America: Brave New World → Action, Thriller, Science Fiction\n",
-      "Sinners → Horror, Thriller\n",
-      "Havoc → Action, Crime, Thriller\n",
-      "¡Qué Huevos, Sofía! → Comedy\n",
-      "Laila → Comedy, Romance\n",
-      "Stream → Horror\n",
-      "Moana 2 → Animation, Adventure, Family, Comedy\n",
-      "Karate Kid: Legends → Action, Adventure, Drama\n",
-      "My Massive Cock → Documentary\n",
-      "Death of a Unicorn → Horror, Fantasy, Comedy\n",
-      "Lilo & Stitch → Family, Comedy, Science Fiction\n",
-      "The Monkey → Horror, Comedy\n",
-      "Final Destination → Horror\n",
-      "Saint Catherine → Horror\n",
-      "Mufasa: The Lion King → Adventure, Family, Animation\n",
-      "Bad Influence → Thriller, Drama, Romance\n",
-      "Final Destination 5 → Horror, Mystery\n",
-      "Sonic the Hedgehog 3 → Action, Science Fiction, Comedy, Family\n",
-      "Desert Dawn → Action, Crime, Mystery, Thriller\n",
-      "Van Gogh by Vincent → Documentary\n",
-      "Novocaine → Action, Comedy, Thriller\n",
-      "G20 → Action, Mystery, Drama\n",
-      "Day of Reckoning → Western, Action\n",
-      "Vini Jr. → Documentary\n",
-      "Drop → Mystery, Thriller\n",
-      "The Siege → Action, Thriller\n",
-      "The Gorge → Romance, Science Fiction, Thriller\n",
-      "Ask Me What You Want → Romance, Drama\n",
-      "My Fault → Romance, Drama\n",
-      "Flight Risk → Action, Thriller\n",
-      "The Wild Robot → Animation, Science Fiction, Family\n",
-      "xXx → Action, Adventure, Thriller, Crime\n",
-      "Final Destination 2 → Horror, Mystery\n",
-      "Summer of 69 → Comedy, Drama\n",
-      "Venom: The Last Dance → Action, Science Fiction, Adventure\n",
-      "Mission: Impossible - Dead Reckoning Part One → Action, Adventure, Thriller\n",
-      "Devara: Part 1 → Action, Drama\n",
-      "Locked → Thriller\n",
-      "The Accountant² → Crime, Thriller, Action\n",
-      "Marked Men: Rule + Shaw → Romance, Drama\n",
-      "Final Destination 3 → Horror, Mystery\n",
-      "Another Simple Favor → Thriller, Comedy, Crime\n",
-      "The Ugly Stepsister → Horror, Drama\n",
-      "The Woman in the Yard → Horror, Mystery\n",
-      "The Substance → Horror, Science Fiction\n",
-      "Kraven the Hunter → Action, Adventure, Thriller\n",
-      "Mickey 17 → Science Fiction, Comedy, Adventure\n",
-      "Stepmom's Desire → Drama, Romance\n",
-      "Nonnas → Comedy\n",
-      "Lilo & Stitch → Animation, Family, Comedy\n",
-      "Gladiator II → Action, Adventure, Drama\n",
-      "Deadpool & Wolverine → Action, Comedy, Science Fiction\n",
-      "Inside Out 2 → Animation, Adventure, Comedy, Family\n",
-      "Despicable Me 4 → Animation, Family, Comedy, Science Fiction\n",
-      "Mission: Impossible → Adventure, Action, Thriller\n",
-      "Conclave → Drama, Thriller, Mystery\n",
-      "The Glenarma Tapes → Horror\n",
-      "Amaran → Action, Drama, Adventure, War\n",
-      "Your Fault → Romance, Drama\n",
-      "Gunslingers → Western, Action\n",
-      "The Goldsmith's Secret → Drama, Romance\n",
-      "The Godfather → Drama, Crime\n",
-      "Interstellar → Adventure, Drama, Science Fiction\n",
-      "Flow → Animation, Fantasy, Adventure\n",
-      "Memoir of a Snail → Animation, Drama, Comedy\n",
-      "Counterattack → Action, Adventure, Thriller\n",
-      "The Conjuring → Horror, Thriller\n",
-      "Anora → Drama, Comedy, Romance\n",
-      "The Accountant → Crime, Thriller, Drama\n",
-      "Kung Fu Panda 4 → Animation, Family, Action, Comedy, Adventure, Fantasy\n",
-      "Demon City → Action, Crime, Fantasy, Thriller\n",
-      "Ligaw → Drama, Romance\n",
-      "Oppenheimer → Drama, History\n",
-      "Believers → Drama\n",
-      "My Fault: London → Romance, Drama\n",
-      "Fast X → Action, Crime, Thriller, Adventure, Mystery\n",
-      "Avengers: Infinity War → Adventure, Action, Science Fiction\n",
-      "Barbie → Comedy, Adventure\n"
-     ]
-    }
-   ],
-   "source": [
-    "from elt import ELT\n",
-    "\n",
-    "elt = ELT()\n",
-    "movies = elt.enrich_genreMovie()\n",
-    "for movie in movies:\n",
-    "    title = movie.get(\"title\", \"Untitled\")\n",
-    "    genres = movie.get(\"genres\", [])\n",
-    "    print(f\"{title} → {', '.join(genres)}\")\n"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
