--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a1cda773",
    "metadata": {},
    "outputs": [],
@@ -10,21 +10,21 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import ast\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import torch\n",
-    "from transformers import RobertaTokenizer, RobertaForSequenceClassification, AdamW\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "from sklearn.metrics import classification_report\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm\n",
-    "import optuna\n",
-    "from optuna.trial import TrialState"
+    "# from sklearn.model_selection import train_test_split\n",
+    "# import torch\n",
+    "# from transformers import RobertaTokenizer, RobertaForSequenceClassification, AdamW\n",
+    "# from torch.utils.data import Dataset, DataLoader\n",
+    "# from sklearn.preprocessing import LabelEncoder\n",
+    "# from sklearn.metrics import classification_report\n",
+    "# import numpy as np\n",
+    "# from tqdm import tqdm\n",
+    "# import optuna\n",
+    "# from optuna.trial import TrialState"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "58035ffe",
    "metadata": {},
    "outputs": [
@@ -180,7 +180,7 @@
        "4  tvshow  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,21 +192,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "65a5b320",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert stringified lists to actual Python lists\n",
     "data['genres'] = data['genres'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x)\n",
+    "data['genres'] = data['genres'].apply(lambda x: ', '.join(x) if isinstance(x, list) else x)\n",
+    "data.to_csv(\"media_data_cleaned.csv\", index=False)\n",
     "\n",
     "# Now extract the first genre\n",
-    "data['genres'] = data['genres'].apply(lambda x: x[0] if isinstance(x, list) and len(x) > 0 else None)"
+    "# data['genres'] = data['genres'].apply(lambda x: x[0] if isinstance(x, list) and len(x) > 0 else None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "00cd09a0",
    "metadata": {},
    "outputs": [
@@ -250,7 +252,7 @@
        "      <th>0</th>\n",
        "      <td>683c39e61a9de58bff15874f</td>\n",
        "      <td>tvmaze_1</td>\n",
-       "      <td>Drama</td>\n",
+       "      <td>Drama, Science-Fiction, Thriller</td>\n",
        "      <td>CBS</td>\n",
        "      <td>6.5</td>\n",
        "      <td>2013-06-24</td>\n",
@@ -265,7 +267,7 @@
        "      <th>1</th>\n",
        "      <td>683c39e61a9de58bff158750</td>\n",
        "      <td>tvmaze_2</td>\n",
-       "      <td>Action</td>\n",
+       "      <td>Action, Crime, Science-Fiction</td>\n",
        "      <td>CBS</td>\n",
        "      <td>8.8</td>\n",
        "      <td>2011-09-22</td>\n",
@@ -280,7 +282,7 @@
        "      <th>2</th>\n",
        "      <td>683c39e61a9de58bff158751</td>\n",
        "      <td>tvmaze_3</td>\n",
-       "      <td>Drama</td>\n",
+       "      <td>Drama, Horror, Romance</td>\n",
        "      <td>CTV Sci-Fi Channel</td>\n",
        "      <td>7.4</td>\n",
        "      <td>2014-01-11</td>\n",
@@ -295,7 +297,7 @@
        "      <th>3</th>\n",
        "      <td>683c39e61a9de58bff158752</td>\n",
        "      <td>tvmaze_4</td>\n",
-       "      <td>Drama</td>\n",
+       "      <td>Drama, Action, Science-Fiction</td>\n",
        "      <td>The CW</td>\n",
        "      <td>7.4</td>\n",
        "      <td>2012-10-10</td>\n",
@@ -310,7 +312,7 @@
        "      <th>4</th>\n",
        "      <td>683c39e61a9de58bff158753</td>\n",
        "      <td>tvmaze_5</td>\n",
-       "      <td>Drama</td>\n",
+       "      <td>Drama, Crime, Thriller</td>\n",
        "      <td>HBO</td>\n",
        "      <td>8.1</td>\n",
        "      <td>2014-01-12</td>\n",
@@ -326,19 +328,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                        _id        id  genres             network  rating  \\\n",
-       "0  683c39e61a9de58bff15874f  tvmaze_1   Drama                 CBS     6.5   \n",
-       "1  683c39e61a9de58bff158750  tvmaze_2  Action                 CBS     8.8   \n",
-       "2  683c39e61a9de58bff158751  tvmaze_3   Drama  CTV Sci-Fi Channel     7.4   \n",
-       "3  683c39e61a9de58bff158752  tvmaze_4   Drama              The CW     7.4   \n",
-       "4  683c39e61a9de58bff158753  tvmaze_5   Drama                 HBO     8.1   \n",
+       "                        _id        id                            genres  \\\n",
+       "0  683c39e61a9de58bff15874f  tvmaze_1  Drama, Science-Fiction, Thriller   \n",
+       "1  683c39e61a9de58bff158750  tvmaze_2    Action, Crime, Science-Fiction   \n",
+       "2  683c39e61a9de58bff158751  tvmaze_3            Drama, Horror, Romance   \n",
+       "3  683c39e61a9de58bff158752  tvmaze_4    Drama, Action, Science-Fiction   \n",
+       "4  683c39e61a9de58bff158753  tvmaze_5            Drama, Crime, Thriller   \n",
        "\n",
-       "  release_date  runtime  source   status  \\\n",
-       "0   2013-06-24       60  tvmaze    Ended   \n",
-       "1   2011-09-22       60  tvmaze    Ended   \n",
-       "2   2014-01-11       60  tvmaze    Ended   \n",
-       "3   2012-10-10       60  tvmaze    Ended   \n",
-       "4   2014-01-12       60  tvmaze  Running   \n",
+       "              network  rating release_date  runtime  source   status  \\\n",
+       "0                 CBS     6.5   2013-06-24       60  tvmaze    Ended   \n",
+       "1                 CBS     8.8   2011-09-22       60  tvmaze    Ended   \n",
+       "2  CTV Sci-Fi Channel     7.4   2014-01-11       60  tvmaze    Ended   \n",
+       "3              The CW     7.4   2012-10-10       60  tvmaze    Ended   \n",
+       "4                 HBO     8.1   2014-01-12       60  tvmaze  Running   \n",
        "\n",
        "                                             summary               title  \\\n",
        "0  Under the Dome is the story of a small town th...      Under the Dome   \n",
@@ -355,7 +357,7 @@
        "4  tvshow  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +368,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
+   "id": "14b2cb57",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1569 entries, 0 to 1568\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   _id           1569 non-null   object \n",
+      " 1   id            1569 non-null   object \n",
+      " 2   genres        1569 non-null   object \n",
+      " 3   network       1494 non-null   object \n",
+      " 4   rating        1569 non-null   float64\n",
+      " 5   release_date  1568 non-null   object \n",
+      " 6   runtime       1569 non-null   int64  \n",
+      " 7   source        1569 non-null   object \n",
+      " 8   status        1569 non-null   object \n",
+      " 9   summary       1569 non-null   object \n",
+      " 10  title         1569 non-null   object \n",
+      " 11  type          1569 non-null   object \n",
+      "dtypes: float64(1), int64(1), object(10)\n",
+      "memory usage: 147.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "400abc71",
    "metadata": {},
    "outputs": [],
@@ -381,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "8db63f29",
    "metadata": {},
    "outputs": [
@@ -396,7 +434,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "e210d6a6",
    "metadata": {},
    "outputs": [
@@ -422,7 +460,7 @@
        "Name: genres, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "8625293b",
    "metadata": {},
    "outputs": [],
@@ -452,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "99e65113",
    "metadata": {},
    "outputs": [],
@@ -491,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "d983a713",
    "metadata": {},
    "outputs": [],
@@ -504,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "0877bfd2",
    "metadata": {},
    "outputs": [
@@ -527,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "47ffde47",
    "metadata": {},
    "outputs": [],
@@ -541,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "8583a42e",
    "metadata": {},
    "outputs": [
@@ -562,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "62ddcffc",
    "metadata": {},
    "outputs": [
@@ -570,123 +608,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                      \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1 - Training loss: 1.8724\n",
-      "                 precision    recall  f1-score   support\n",
-      "\n",
-      "                      0.42      0.85      0.56        39\n",
-      "         Action       0.00      0.00      0.00        23\n",
-      "      Adventure       0.00      0.00      0.00         7\n",
-      "          Anime       0.00      0.00      0.00         1\n",
-      "       Children       0.00      0.00      0.00         2\n",
-      "         Comedy       0.81      0.49      0.61        72\n",
-      "          Crime       0.00      0.00      0.00         5\n",
-      "            DIY       0.00      0.00      0.00         1\n",
-      "          Drama       0.64      0.90      0.75       136\n",
-      "         Family       0.00      0.00      0.00         2\n",
-      "           Food       0.00      0.00      0.00         6\n",
-      "        History       0.00      0.00      0.00         2\n",
-      "         Horror       0.00      0.00      0.00         2\n",
-      "          Music       0.00      0.00      0.00         4\n",
-      "        Mystery       0.00      0.00      0.00         2\n",
-      "         Nature       0.00      0.00      0.00         4\n",
-      "        Romance       0.00      0.00      0.00         2\n",
-      "Science-Fiction       0.00      0.00      0.00         2\n",
-      "         Sports       0.00      0.00      0.00         1\n",
-      "            War       0.00      0.00      0.00         1\n",
-      "\n",
-      "       accuracy                           0.61       314\n",
-      "      macro avg       0.09      0.11      0.10       314\n",
-      "   weighted avg       0.52      0.61      0.53       314\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                      \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 2 - Training loss: 1.1427\n",
-      "                 precision    recall  f1-score   support\n",
-      "\n",
-      "                      0.48      0.74      0.58        39\n",
-      "         Action       0.56      0.61      0.58        23\n",
-      "      Adventure       0.00      0.00      0.00         7\n",
-      "          Anime       0.00      0.00      0.00         1\n",
-      "       Children       0.00      0.00      0.00         2\n",
-      "         Comedy       0.67      0.92      0.77        72\n",
-      "          Crime       0.00      0.00      0.00         5\n",
-      "            DIY       0.00      0.00      0.00         1\n",
-      "          Drama       0.81      0.77      0.79       136\n",
-      "         Family       0.00      0.00      0.00         2\n",
-      "           Food       0.00      0.00      0.00         6\n",
-      "        History       0.00      0.00      0.00         2\n",
-      "         Horror       0.00      0.00      0.00         2\n",
-      "          Music       0.00      0.00      0.00         4\n",
-      "        Mystery       0.00      0.00      0.00         2\n",
-      "         Nature       0.00      0.00      0.00         4\n",
-      "        Romance       0.00      0.00      0.00         2\n",
-      "Science-Fiction       0.00      0.00      0.00         2\n",
-      "         Sports       0.00      0.00      0.00         1\n",
-      "            War       0.00      0.00      0.00         1\n",
-      "\n",
-      "       accuracy                           0.68       314\n",
-      "      macro avg       0.13      0.15      0.14       314\n",
-      "   weighted avg       0.61      0.68      0.63       314\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                      \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 3 - Training loss: 0.8509\n",
-      "                 precision    recall  f1-score   support\n",
-      "\n",
-      "                      0.55      0.77      0.64        39\n",
-      "         Action       0.57      0.52      0.55        23\n",
-      "      Adventure       0.00      0.00      0.00         7\n",
-      "          Anime       0.00      0.00      0.00         1\n",
-      "       Children       0.00      0.00      0.00         2\n",
-      "         Comedy       0.73      0.92      0.81        72\n",
-      "          Crime       0.00      0.00      0.00         5\n",
-      "            DIY       0.00      0.00      0.00         1\n",
-      "          Drama       0.77      0.81      0.79       136\n",
-      "         Family       0.00      0.00      0.00         2\n",
-      "           Food       1.00      0.83      0.91         6\n",
-      "        History       0.00      0.00      0.00         2\n",
-      "         Horror       0.00      0.00      0.00         2\n",
-      "          Music       0.00      0.00      0.00         4\n",
-      "        Mystery       0.00      0.00      0.00         2\n",
-      "         Nature       0.00      0.00      0.00         4\n",
-      "        Romance       0.00      0.00      0.00         2\n",
-      "Science-Fiction       0.00      0.00      0.00         2\n",
-      "         Sports       0.00      0.00      0.00         1\n",
-      "            War       0.00      0.00      0.00         1\n",
-      "\n",
-      "       accuracy                           0.71       314\n",
-      "      macro avg       0.18      0.19      0.18       314\n",
-      "   weighted avg       0.63      0.71      0.67       314\n",
-      "\n"
+      "Epoch 1/3:   0%|          | 0/79 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -848,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "c3c7e0f6",
    "metadata": {},
    "outputs": [
@@ -908,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "b7d76990",
    "metadata": {},
    "outputs": [
