--- a/test.ipynb
+++ b/test.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "58035ffe",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>683c39e61a9de58bff15874f</td>\n",
+       "      <td>683c357ae8207c39b8fc5651</td>\n",
        "      <td>tvmaze_1</td>\n",
        "      <td>['Drama', 'Science-Fiction', 'Thriller']</td>\n",
        "      <td>CBS</td>\n",
@@ -81,7 +81,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>683c39e61a9de58bff158750</td>\n",
+       "      <td>683c357ae8207c39b8fc5652</td>\n",
        "      <td>tvmaze_2</td>\n",
        "      <td>['Action', 'Crime', 'Science-Fiction']</td>\n",
        "      <td>CBS</td>\n",
@@ -96,7 +96,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>683c39e61a9de58bff158751</td>\n",
+       "      <td>683c357ae8207c39b8fc5653</td>\n",
        "      <td>tvmaze_3</td>\n",
        "      <td>['Drama', 'Horror', 'Romance']</td>\n",
        "      <td>CTV Sci-Fi Channel</td>\n",
@@ -111,7 +111,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>683c39e61a9de58bff158752</td>\n",
+       "      <td>683c357ae8207c39b8fc5654</td>\n",
        "      <td>tvmaze_4</td>\n",
        "      <td>['Drama', 'Action', 'Science-Fiction']</td>\n",
        "      <td>The CW</td>\n",
@@ -126,7 +126,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>683c39e61a9de58bff158753</td>\n",
+       "      <td>683c357ae8207c39b8fc5655</td>\n",
        "      <td>tvmaze_5</td>\n",
        "      <td>['Drama', 'Crime', 'Thriller']</td>\n",
        "      <td>HBO</td>\n",
@@ -145,11 +145,11 @@
       ],
       "text/plain": [
        "                        _id        id  \\\n",
-       "0  683c39e61a9de58bff15874f  tvmaze_1   \n",
-       "1  683c39e61a9de58bff158750  tvmaze_2   \n",
-       "2  683c39e61a9de58bff158751  tvmaze_3   \n",
-       "3  683c39e61a9de58bff158752  tvmaze_4   \n",
-       "4  683c39e61a9de58bff158753  tvmaze_5   \n",
+       "0  683c357ae8207c39b8fc5651  tvmaze_1   \n",
+       "1  683c357ae8207c39b8fc5652  tvmaze_2   \n",
+       "2  683c357ae8207c39b8fc5653  tvmaze_3   \n",
+       "3  683c357ae8207c39b8fc5654  tvmaze_4   \n",
+       "4  683c357ae8207c39b8fc5655  tvmaze_5   \n",
        "\n",
        "                                     genres             network  rating  \\\n",
        "0  ['Drama', 'Science-Fiction', 'Thriller']                 CBS     6.5   \n",
@@ -180,7 +180,7 @@
        "4  tvshow  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,18 +192,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "65a5b320",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Convert stringified lists to actual Python lists\n",
-    "data['genres'] = data['genres'].apply(lambda x: ast.literal_eval(x) if isinstance(x, str) else x)\n",
-    "data['genres'] = data['genres'].apply(lambda x: ', '.join(x) if isinstance(x, list) else x)\n",
-    "data.to_csv(\"media_data_cleaned.csv\", index=False)\n",
+    "def safe_literal_eval(x):\n",
+    "    \"\"\"Safely evaluate string as Python literal with null handling\"\"\"\n",
+    "    if pd.isna(x):\n",
+    "        return x  # Return the original null value (np.nan/None)\n",
+    "    if isinstance(x, str):\n",
+    "        try:\n",
+    "            return ast.literal_eval(x)\n",
+    "        except (ValueError, SyntaxError):\n",
+    "            return x  # Return the original string if evaluation fails\n",
+    "    return x  # Return non-string values as-is\n",
     "\n",
-    "# Now extract the first genre\n",
-    "# data['genres'] = data['genres'].apply(lambda x: x[0] if isinstance(x, list) and len(x) > 0 else None)"
+    "# Convert stringified lists to actual Python lists (with null preservation)\n",
+    "data['genres'] = data['genres'].apply(safe_literal_eval)\n",
+    "\n",
+    "# Convert lists to strings (with null preservation)\n",
+    "data['genres'] = data['genres'].apply(\n",
+    "    lambda x: ', '.join(map(str, x)) \n",
+    "    if isinstance(x, list) \n",
+    "    else (str(x) if pd.notna(x) else x)\n",
+    ")\n",
+    "\n",
+    "data.to_csv(\"media_data_cleaned.csv\", index=False)"
    ]
   },
   {
@@ -865,7 +880,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
